<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_check_gjobe"
            android:icon="@mipmap/ic_check_gjobe"
            android:title="@string/item_drawer_kontrollo" />
        <item
            android:id="@+id/nav_my_vehicles"
            android:icon="@mipmap/ic_my_vehicles"
            android:title="@string/item_drawer_automjetet" />
        <item
            android:id="@+id/nav_about_app"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/item_drawer_about" />
    </group>
    <item android:title="@string/shpernda_app">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/Share" />
        </menu>
    </item>
</menu>